# sqslistener

./: Cargo.toml  README.md  example.sqslistener.toml
.github/workflows/: pr.yml  release.yml
installation/: install.sh  sqslistener.service
src/: config.rs  main.rs  runner.rs
src/installation/: sqslistener.service
