[package]
name = "sqslistener"
version = "0.0.0"
edition = "2021"
description = "Trigger command execution from SQS queues"
authors = ["Jake Laurie"]
readme = "README.md"
homepage = "https://github.com/xtenduke/sqslistener"
keywords = ["aws", "sqs", "cron"]
categories = ["command-line-utilities"]
license-file = "Apache-2.0"
exclude = ["*.zip"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-sqs = "1.13.0"
aws-config = { version = "1.1.5", features = ["behavior-version-latest"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8.10"
serde = "1.0.197"
serde_derive = "1.0.197"
home = "0.5.9"
env_logger = "0.11.2"
log = "0.4.20"
url = "2.5.0"
